dixon video updates

--- a/child_pages/cc-elections/Candidates/dixon.html
+++ b/child_pages/cc-elections/Candidates/dixon.html
@@ -307,12 +307,237 @@
 
     <details>
             <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
-                <div class="video-box-modal can-sec"> 
-                    <h3 class="video-heading">BBQ Meet N Greet Speech</h3> 
-                    <iframe src="https://www.youtube.com/embed/G_NoJuCJ4J4?si=7r8AKDliaJdxWq7-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                </div>
+
+            <h3 class="video-heading">Dan Dixon: Millville City Commission Campaign Presentation (PowerPoint)</h3>
+                <iframe src="https://www.youtube.com/embed/jJ8FA-ktq0k?si=bNJfet1hksb4svP-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <br>
+                <br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full presentation summary 📋</summary>
+                    <br>
+                    <br>
+                    <div style="padding: 15px 25px; text-align: left;">
+                        <p>In this ~21-minute campaign presentation, Millville City Commission candidate <strong>Dan Dixon</strong> introduces his background as a third-generation Millville resident, small-business owner, and longtime coach/instructor. He traces a path from sales/marketing management to founding Impact Fitness &amp; Martial Arts (2007–present), highlighting relationship-building, revenue generation, and team leadership.</p>
+
+                        <p><strong>Core Thesis:</strong><br>
+                        Millville needs a proactive “standard-bearer” who can <em>sell and market the city</em>, build relationships with developers, and make it easier to do business here. Dixon pairs that with a public-safety focus, arguing that <em>crime reduction and economic development must move together</em>.</p>
+
+                        <p><strong>Public Safety &amp; Code Tools:</strong><br>
+                        He points to a 10-point crime plan leveraging code enforcement, nuisance-property designations, and landlord accountability to target a small core of repeat offenders. The goal is to stabilize neighborhoods so families feel safe and investment can follow.</p>
+
+                        <p><strong>Economic Development &amp; Ease of Doing Business:</strong><br>
+                        Dixon proposes a dedicated portal—<em>“MillvilleMeansBusiness.org”</em>—with a step-by-step guide, a business liaison, and a live inventory of city-owned and private commercial properties. He emphasizes proactive outreach to firms planning expansions and prioritizing higher-wage employers.</p>
+
+                        <p><strong>Closing Message:</strong><br>
+                        Rejecting the idea that Millville is a “lost cause,” Dixon calls for disciplined policy, consistent marketing, and community involvement. He invites residents to events, asks for support, and frames service as a net sacrifice undertaken out of commitment to the city.</p>
+                    </div>
+                </details>
+
+                <br>
+                <br>
+
+                <details>
+                    <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+                    <div class="video-summary" style="margin-top: 1em;">
+                        <h2>Presentation Summary – Dan Dixon</h2>
+                        <p>This table highlights the key topics covered in the presentation, summarizing major takeaways per section.</p>
+                        <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                            <thead>
+                                <tr>
+                                    <th style="text-align: left;">Timestamp</th>
+                                    <th style="text-align: left;">Topic</th>
+                                    <th style="text-align: left;">Key Takeaways</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>0:01</td>
+                                    <td>Intro &amp; family roots</td>
+                                    <td>Third-generation Millville resident; husband, father, grandfather; many know him through Impact Fitness &amp; Martial Arts.</td>
+                                </tr>
+                                <tr>
+                                    <td>2:04</td>
+                                    <td>Education</td>
+                                    <td>Undergrad/grad work in exercise science; two master’s degrees; certifications; currently in a PhD program with dissertation planned after campaign duties.</td>
+                                </tr>
+                                <tr>
+                                    <td>3:35</td>
+                                    <td>Career path</td>
+                                    <td>Sales/marketing and management in horticulture; founded and operates gym (since 2007); emphasizes revenue generation, budgeting, promotion.</td>
+                                </tr>
+                                <tr>
+                                    <td>4:44</td>
+                                    <td>Volunteer leadership</td>
+                                    <td>Directed church drama; experience organizing and motivating volunteers—useful for coalition-building and civic projects.</td>
+                                </tr>
+                                <tr>
+                                    <td>5:26</td>
+                                    <td>Why he’s ready to lead</td>
+                                    <td>Identifies gap: Millville lacks a “standard-bearer” to sell/market the city and forge outside partnerships; positions himself as a relationship builder.</td>
+                                </tr>
+                                <tr>
+                                    <td>7:20</td>
+                                    <td>Engagement &amp; research</td>
+                                    <td>Watched commission meetings for two years; spent recent weeks interviewing staff, department heads, former officials, and community leaders.</td>
+                                </tr>
+                                <tr>
+                                    <td>9:21</td>
+                                    <td>Public safety focus</td>
+                                    <td>10-point plan using code enforcement, nuisance-property tools, and landlord accountability; targets a small core of repeat offenders harming neighborhoods.</td>
+                                </tr>
+                                <tr>
+                                    <td>12:26</td>
+                                    <td>Business portal proposal</td>
+                                    <td><em>MillvilleMeansBusiness.org</em> concept: step-by-step process, dedicated liaison, property inventory (city &amp; private), and investor-friendly navigation.</td>
+                                </tr>
+                                <tr>
+                                    <td>14:55</td>
+                                    <td>Crime ↔ Development linkage</td>
+                                    <td>Economic growth and crime reduction are interdependent; both must be pursued in tandem to restore stability and attract investment.</td>
+                                </tr>
+                                <tr>
+                                    <td>17:02</td>
+                                    <td>Personal story &amp; vision</td>
+                                    <td>Childhood freedom vs. current safety concerns; cites Rome, GA as a downtown model with disciplined standards and active management.</td>
+                                </tr>
+                                <tr>
+                                    <td>19:00</td>
+                                    <td>Policy levers &amp; ordinances</td>
+                                    <td>Notes permissible limits on behaviors (e.g., blocking entries, camping, traffic-distraction in intersections) alongside free-speech protections.</td>
+                                </tr>
+                                <tr>
+                                    <td>20:25</td>
+                                    <td>Closing call to action</td>
+                                    <td>Rejects “lost cause” mindset; invites residents to events, yard signs, and participation; frames service as commitment over pay.</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </details>
+
+                <h3 class="video-heading">Dan Dixon: Meet-and-Greet Speech (Public Safety First)</h3>
+                    <iframe src="https://www.youtube.com/embed/G_NoJuCJ4J4?si=4i8GtaO-NpspssRc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <br>
+                    <br>
+
+                    <details>
+                        <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">📋 Click here for full speech summary 📋</summary>
+                        <br>
+                        <br>
+                        <div style="padding: 15px 25px; text-align: left;">
+                            <p>At this meet-and-greet, Millville City Commission candidate <strong>Dan Dixon</strong> lays out a clear priority: <em>public safety before (and alongside) economic development</em>. He argues investors won’t commit serious dollars without visible safety improvements and says the city has had the sequence backwards.</p>
+
+                            <p><strong>Police Staffing &amp; Retention:</strong><br>
+                            Dixon notes the hiring lag (academy + field training ≈ ~10 months) and emphasizes retention as the immediate pain point. He cites step-pay gaps of roughly $15–20k compared to Vineland that pull officers away and calls for getting sworn strength to ~85 and keeping it there.</p>
+
+                            <p><strong>Code Enforcement &amp; Nuisance Properties:</strong><br>
+                            He urges aggressive use of nuisance-property tools (e.g., citations after qualifying calls within 90 days), pushing for trials in absentia, bench warrants, and—per a newer state statute—rolling unpaid fines into the <em>tax bill</em> (not just a lien) to trigger foreclosure if ignored. Goal: make negligent landlords more selective and accountable.</p>
+
+                            <p><strong>Focus on Repeat Offenders &amp; Youth Prevention:</strong><br>
+                            Dixon frames a three-prong approach: (1) law enforcement pressure on a relatively small group (≈200–300) driving most violence and disorder; (2) nuisance-property enforcement to disrupt hot spots; (3) prevention with community partners (e.g., inner-city youth outreach) to redirect kids before they choose the wrong path.</p>
+
+                            <p><strong>Illegal Bikes/ATVs &amp; Pursuit Limits:</strong><br>
+                            He proposes a <em>drone program</em> to identify and seize illegal bikes/ATVs (with unclaimed vehicles destroyed after a hold period), noting state-level pursuit restrictions on traffic infractions limit MPD’s options.</p>
+
+                            <p><strong>Closing:</strong><br>
+                            Dixon rejects fatalism about Millville’s future, asks residents to spread the word, grab yard signs, and push for policies—and statewide leadership—that support law enforcement and neighborhood stability.</p>
+                        </div>
+                    </details>
+
+                    <br>
+                    <br>
+
+                    <details>
+                        <summary style="text-align: center; font-weight: bold; font-size: 1.1em; cursor: pointer;">⏳ Click to view timestamps, topics, and takeaways ⏳</summary>
+                        <div class="video-summary" style="margin-top: 1em;">
+                            <h2>Speech Summary – Dan Dixon (Meet-and-Greet)</h2>
+                            <p>This table highlights key sections of the speech with the main takeaways.</p>
+                            <table border="1" cellpadding="8" cellspacing="0" style="width: 100%; border-collapse: collapse;">
+                                <thead>
+                                    <tr>
+                                        <th style="text-align: left;">Timestamp</th>
+                                        <th style="text-align: left;">Topic</th>
+                                        <th style="text-align: left;">Key Takeaways</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>0:00</td>
+                                        <td>Opening &amp; vision</td>
+                                        <td>Thanks supporters; signals alignment with like-minded candidates; points audience to detailed platform on his website.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1:08</td>
+                                        <td>Public safety mandate</td>
+                                        <td>Poll: ~60/70 respondents prioritize public safety; argument that safety must precede meaningful investment.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1:55</td>
+                                        <td>Economy vs. safety sequencing</td>
+                                        <td>Investors won’t put $100k–$250M into a city perceived unsafe; city’s had the order backwards.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2:27</td>
+                                        <td>Hiring lag reality</td>
+                                        <td>New officers take ~6 months academy + ~4 months FTO; election-year hiring should’ve started years earlier.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>3:00</td>
+                                        <td>Retention &amp; pay steps</td>
+                                        <td>Vineland pays ~$15–20k more at higher steps; calls for step parity to stop “bleeding out” officers; target ~85 officers.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4:46</td>
+                                        <td>Recent violence example</td>
+                                        <td>High Street shooting underscores why “gang vs. gang” still endangers the public; safety issues are everyone’s concern.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>5:22</td>
+                                        <td>Nuisance property strategy</td>
+                                        <td>Use ordinance (≥5 qualifying calls/90 days) to cite owners; push trials in absentia, bench warrants, license suspensions for no-shows.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6:21</td>
+                                        <td>Turning fines into taxes</td>
+                                        <td>New state path: roll unpaid nuisance fines into the tax bill (not just a lien), enabling foreclosure if unpaid.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>7:28</td>
+                                        <td>Repeat-offender focus</td>
+                                        <td>Estimates ~200–300 individuals drive most problems; majority of residents want peaceful neighborhoods like anyone else.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8:48</td>
+                                        <td>Three-prong approach</td>
+                                        <td>Law enforcement pressure + nuisance enforcement + youth prevention via partners (e.g., JT Burks) to change the trajectory.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>9:53</td>
+                                        <td>Funding/pay fixes</td>
+                                        <td>Hints at near-term options to adjust step pay; parallel track on economic development once safety stabilizes.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10:19</td>
+                                        <td>Drone program proposal</td>
+                                        <td>Use drones to locate illegal bikes/ATVs for seizure; unclaimed vehicles destroyed after 90 days—deterrence effect.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>11:41</td>
+                                        <td>Pursuit restrictions</td>
+                                        <td>Notes state AG use-of-force policy limits pursuits for traffic infractions; argues for statewide leadership supportive of policing.</td>
+                                    </tr>
+                                    <tr>
+                                        <td>12:14</td>
+                                        <td>Close &amp; call to action</td>
+                                        <td>Encourages questions, sign-ups, and yard signs; asks attendees to spread the word and stay engaged.</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </details>
     </details>
-    
+
     <br>
     <br>
 
