<div> can-sec added dixon videos

--- a/child_pages/cc-elections/Candidates/dixon.html
+++ b/child_pages/cc-elections/Candidates/dixon.html
@@ -308,6 +308,7 @@
     <details>
             <summary style="font-size: 2em; cursor:pointer; color:blue; text-decoration:underline;">Videos</summary>
 
+            <div class="video-box-modal can-sec">
             <h3 class="video-heading">Dan Dixon: Millville City Commission Campaign Presentation (PowerPoint)</h3>
                 <iframe src="https://www.youtube.com/embed/jJ8FA-ktq0k?si=bNJfet1hksb4svP-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <br>
@@ -415,7 +416,9 @@
                         </table>
                     </div>
                 </details>
+                </div>
 
+                <div class="video-box-modal can-sec">
                 <h3 class="video-heading">Dan Dixon: Meet-and-Greet Speech (Public Safety First)</h3>
                     <iframe src="https://www.youtube.com/embed/G_NoJuCJ4J4?si=4i8GtaO-NpspssRc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     <br>
@@ -536,6 +539,7 @@
                             </table>
                         </div>
                     </details>
+                    </div>
     </details>
 
     <br>
