homepage nave bar cleanup

--- a/index.html
+++ b/index.html
@@ -347,10 +347,11 @@
             <div class="homepage-links-box">
                 <div class="other-links">
                     <a href="#" id='navBoxToggle' class="overlay-nav-link">Elections</a>
-                    <a href="#" id='navBoxToggle2' class="overlay-nav-link">Issues</a>
-                    <a href="child_pages/get-involved.html" class="overlay-nav-link">Get Involed</a>
                     <a href="child_pages/events.html" class="overlay-nav-link">Events</a>
-                    <a href="child_pages/resources-archives-and-rabbit-holes.html" class="overlay-nav-link">Extra Info</a>
+                    <!-- <a href="#" id='navBoxToggle2' class="overlay-nav-link">Issues</a> -->
+                    <a href="child_pages/get-involved.html" class="overlay-nav-link">Get Involed</a>
+                    
+                    <!-- <a href="child_pages/resources-archives-and-rabbit-holes.html" class="overlay-nav-link">Extra Info</a> -->
                     <a href="child_pages/about.html" class="overlay-nav-link">About</a>
                     <a href="child_pages/contact.html" class="overlay-nav-link">Contact</a>
                 </div>
