matthew horowitz name fix

--- a/child_pages/cc-elections/Candidates/horowitz.html
+++ b/child_pages/cc-elections/Candidates/horowitz.html
@@ -139,7 +139,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close1" class="close">
               <h4 class="quick-sum">quick summary</h4>
-              <h6 class="page-title">Michael A. Horowitz</h6>
+              <h6 class="page-title">Matthew A. Horowitz</h6>
               <p>          
 
                 As of 7/8/2025, we still don't have any information on this candidate. As a reminder, we reach out through information obtained through whichever clerk's office 
@@ -158,7 +158,7 @@
             <div class="modal-content">
               <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close">
               <h4 class="quick-sum">Rating Explanation</h4>
-              <h6 class="page-title">Michael A. Horowitz</h6>
+              <h6 class="page-title">Matthew A. Horowitz</h6>
               <p>          
 
                 Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
@@ -220,7 +220,7 @@
     </div>
 
      <div class="title-info">
-        <h2>Michael A. Horowitz</h2>
+        <h2>Matthew A. Horowitz</h2>
          <div class="running-for">
              <div class="running-title">Running for: </div>
              <div class="position">Hopewell-Shiloh School Board</div>
@@ -233,7 +233,7 @@
      <div class="candidate-pic-box">
          <!-- <img class="cover" src="../../../assets/candidates/.jpg" class="candidate-pic"> -->
          <div class="candidate-pic-box-content">
-             <h4 class="sub-heading">Websites</h4>
+             <h4 class="sub-heading" style="text-align: center;">Websites</h4>
              <div class="website">
                  
                  
