gregoire pic updated

--- a/child_pages/cc-elections/Candidates/gregoire.html
+++ b/child_pages/cc-elections/Candidates/gregoire.html
@@ -226,7 +226,7 @@
   </div>
 
   <div class="candidate-pic-box">
-    <img class="cover" src="../../../assets/candidates/gregoire.jpg" alt="Daniel Gregoire headshot" class="candidate-pic">
+    <img class="cover" src="../../../assets/candidates/gregoire.png" alt="Daniel Gregoire headshot" class="candidate-pic">
     <div class="candidate-pic-box-content">
       <h4 class="sub-heading" style="text-align: center;">Websites</h4>
       <div class="website">
