--- a/child_pages/cc-elections/Candidates/gregoire.html
+++ b/child_pages/cc-elections/Candidates/gregoire.html
@@ -12,7 +12,7 @@
         <meta property="og:type" content="website">
         <meta property="og:title" content="Candidate Daniel Gregoire">
         <meta property="og:description" content="Running For Millville City Commissioner">
-        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/">
+        <meta property="og:image" content="https://www.informthevotenj.com/assets/candidates/gregoire.png">
         <meta property="og:url" content="https://www.informthevotenj.com/child_pages/cc-elections/candidates/gregoire">
     </head>
 <!-- Google tag (gtag.js) -->
