quick sum and transparency update for Carman

--- a/child_pages/cc-elections/Candidates/carman.html
+++ b/child_pages/cc-elections/Candidates/carman.html
@@ -138,14 +138,16 @@
             <div class="modal-content"> <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close1" class="close"> 
                 <h4 class="quick-sum">quick summary</h4> 
                 <h6 class="page-title">J.R. Carman</h6> 
-                <p> J.R. Carman is seeking re-election to the Hopewell–Shiloh Board of Education (Hopewell Crest School). In a public statement, 
-                    he frames his role around “protect and serve,” emphasizing student and staff safety (a <em>defense-in-depth</em> approach), 
-                    intellectual growth and individuality, a positive school climate with new curriculum initiatives, partnership with parents, 
-                    support for educators and administrators, and conservative fiscal stewardship on behalf of all taxpayers. <br><br> In a 
-                    recent long-form radio conversation with InformTheVoteNJ, Carman discussed civic education and the character of public 
-                    officials, noting (on-air) that Hopewell Crest incorporates civics in every grade and identifying himself as the Board’s 
-                    curriculum committee chair. District-specific plans, measurable targets, or recent vote explanations were not provided in 
-                    writing or on-air, but if he provides that at some point during the campaign season, he will be on track to being fully transparent this election. 
+                <p> J.R. Carman is seeking a second term on the Hopewell–Shiloh Board of Education (Hopewell Crest School). He frames his service around “protect and serve” 
+                    emphasizing that a full defense-in-depth security program is already in place—campus-wide camera coverage monitored by administration, locked doors, staff and student 
+                    situational-awareness training, and coordination with the New Jersey State Police—with a commitment to ongoing incremental upgrades (lighting, cameras, vigilance training).
+                    <br>
+                    Carman presents a holistic agenda: individualized student growth within state standards, early and ongoing civics and social-studies exposure, and a culture shift through the 
+                    “Renaissance” initiative that stresses attendance, positive attitudes, and honoring education. He asserts parents are the primary educators and the school a supplement, calls to 
+                    continue cooperative board–staff relations, and supports transparent planning for facility expansion amid current space constraints and high taxes.
+                    <br>
+                    He serves as Curriculum Committee Chair, hosts the New Jersey Constitutional Republican Radio Hour (WVLT), and openly frames school board service within constitutional 
+                    principles and representative government. 
                     <br><br>
                     Click the red x at the top of this box and then scroll down for more in-depth information and sources. </p> 
             </div> 
@@ -155,17 +157,16 @@
             <div class="modal-content"> <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" id="close2" class="close"> 
                 <h4 class="quick-sum">Rating Explanation</h4> 
                 <h6 class="page-title">J.R. Carman</h6> 
-                <p> Relative to the Cumberland County status quo, Carman’s transparency and accessibility is <strong>on the right track</strong> as of <strong>August 25, 2025</strong>: 
-                    he offered a public statement and participated in a substantive radio discussion (good accessibility), and is booked for a campaign-specific interview on the InformTheVoteNJ
-                    radio hour on Tuesday 9/9 from 5-6pm. That being said, he did not complete the site’s structured questionnaire and has not published an issue-by-issue brief with concrete, 
-                    current district specifics and action plans. 
-                    <br><br> 
-                    Carman's public statement highlights values—safety, academics, parent partnership, staff support, and fiscal stewardship—and the interview focuses 
-                    on civic education and governance philosophy... all of which fit into a solid agenda and governing ideology.
-                    What’s still missing for voters are concise, written stances on current Hopewell Crest priorities (e.g., safety implementation details, budget/levy outlook, facilities, staffing, 
-                    curriculum changes), recent vote rationales, and measurable goals for the next term. Such clarification would fit neatly into an issues section on his page.
-                    <br><br>
-                    A short follow-up—a list of issues, positions, and action plans would quickly move this toward a higher transparency tier. 
+                <p> Relative to the Cumberland County status quo, Carman’s transparency and accessibility is above average and trending upward as of September 10, 2025. He has expanded far beyond a 
+                    single post or platitude: a detailed public statement, a long-form radio interview with InformTheVoteNJ clarifying active safety measures (cameras, locked doors, 
+                    vigilance training, State Police coordination), his “Renaissance” culture goals, parent-school partnership philosophy, individualized learning approach, and acknowledgement 
+                    of space/tax pressures. He also remains visible as host of the New Jersey Constitutional Republican Radio Hour, which puts him in regular dialogue with the community.
+                    <br>
+                    A true top-tier transparency rating would require checking virtually every campaign-season box: 
+                    hosting at least one open meet-and-greet, attending a town-hall-style 
+                    session specifically for voters, participating in a more press-style follow-up interview where he fields unscripted or tougher questions about implementation and trade-offs.
+                    And that should certainly not be taken personally. That probably seems a bit much for a local school board race, but wouldn't it be nice if that became the new county standard? 
+                    
                     <br><br> 
                     Click the red x at the top of this box and then scroll down for more in-depth information and sources. 
                 </p> 
@@ -414,6 +415,8 @@
             </details>
             </div>
 
+
+            <div class="video-box-modal can-sec">
             <h3 class="video-heading">2025 InformTheVoteNJ Interview With J.R. Carman</h3>
 
 <iframe src="https://www.youtube.com/embed/_0h2XduooFE?si=-W9GDL04YfKQRW-x" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>    
@@ -546,6 +549,7 @@
     </table>
     </div>
 </details>
+</div>
 
         </details>
 
